tests/snapshots/run_wpt_conformance__onnx_expand_int32_2D_tensor_to_2D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "expand.https.any.js",
    "expand int32 2D tensor to 2D",
    "onnx",
    "PASS",
)
